overflow bug fix

--- a/css/sekhar.css
+++ b/css/sekhar.css
@@ -3,20 +3,23 @@
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
-
+    width:100%;
+    background-color: blue;
 }
 
 .image-gallery > .image-holder 
 {
     margin:1rem;
     display: flex;
-    
+    box-sizing: border-box;
+  
 
 }
 
 .image-holder > .overlay-layer
 {
     position: absolute;
+ box-sizing: border-box;
     z-index:3;
     background-color: rgba(0,0,0,0.3);
     display: flex;
@@ -30,6 +33,7 @@
     transition: all 250ms;
     color: white;
     font-family: sans-serif;
+      overflow: hidden;
 }
 
 
@@ -49,7 +53,7 @@
 
 .image-holder > .overlay-layer > .title
 {
-
+    text-align: center;
 }
 
 .image-holder:hover > .overlay-layer > .title
